feat: add funcionalidades e rotas de avaliações e wishlist
